src/components/editor/styles.css
/* ... */
/*.bn-code-content and .bn-table-content can be replaced by bn-block or unified in to .bn-block-custom*/
/* * NOTE: Custom Styles for BlockNote*/
.bn-code-content
  .bn-block-content:not([data-content-type="codeBlock"])
  :not(pre)
  code {
  background-color: light-dark(#00000012, #ffffff12);
  font-variant-ligatures: none; /*Maybe add ligatures later*/
  color: var(--lc-text-color-monospace);
  /*border-radius: 4px;*/
  border-radius: calc(0.1em + 3px);
  padding: 0.1rem 0.28em 0.1rem; /*Shorthand definition*/
  font-family: var(--lc-font-monospace);
  font-size: calc(1em - 2px); /*MAYBE: Adjust later*/
  font-weight: 400; /*Hevier font for better readability, due to different display in light mode*/
}

.bn-root[data-color-scheme="dark"]
  .bn-block-content:not([data-content-type="codeBlock"])
  :not(pre)
  code {
  font-weight: 300 !important;
}

.bn-code-content .bn-block-content[data-content-type="codeBlock"] pre code {
  font-family: var(--lc-font-monospace);
  font-variant-ligatures: none; /*Maybe add ligatures later*/
  font-size: 14px; /*MAYBE: Adjust later*/
  font-weight: 300;
  /*line-height: 1.2;*/
  white-space: pre;
  /*&.bn-inline-content {
        white-space: pre;
    }*/
}

.bn-root[data-color-scheme="dark"]
  .bn-block-content[data-content-type="codeBlock"] {
  /*border: 1px solid var(--color-border);*/
  background-color: #0e0e12; /*was: #101015*/
  scrollbar-color: #ffffff66 transparent;
}

.bn-root[data-color-scheme="light"]
  .bn-block-content[data-content-type="codeBlock"] {
  background-color: #202020;
  scrollbar-color: #ffffff76 transparent;
}

/*.bn-root[data-color-scheme]
    .bn-block-content[data-content-type="codeBlock"] {
    background-color: light-dark(#202020, #111116);
}*/

.bn-table-content .bn-block-content[data-content-type="table"] th {
  background-color: light-dark(#00000009, #dddddf09);
}

/*Light mode still has default border color*/
.bn-root[data-color-scheme="dark"]
  .bn-block-content[data-content-type="table"]
  th,
.bn-root[data-color-scheme="dark"]
  .bn-block-content[data-content-type="table"]
  td {
  border: 1px inset #2a303d !important;
  /*border-collapse: collapse;
    border-spacing: 0;*/
}

.bn-root[data-color-scheme]
  .bn-table-content
  .bn-block-content[data-content-type="table"]
  .tableWrapper {
  margin-right: 5px;
}

/*.bn-root[data-color-scheme]
    .bn-table-content
    .bn-block-content[data-content-type="table"]
    .tableWrapper
    .tableWrapper-inner
    table {
    margin-right: 100px;
}*/

/*.bn-root:has(.bn-editor[contenteditable="true"])
    .bn-block-content[data-content-type="table"]
    table {
    max-width: 85vw;
}*/

/*.bn-table-border table th td {
    border-color: var(--color-border);
}*/

.bn-root[data-color-scheme="dark"]
  .bn-block-content[data-content-type="quote"]
  blockquote {
  color: #b0b0b2;
  border-left: 2px solid #5a6270;
}

.bn-root[data-color-scheme="dark"]
  .bn-block-content[data-content-type="divider"]
  hr {
  border-top: 1px solid #5a6270;
}

/* @media (min-width: 728px) {
  .bn-root[data-color-scheme] .bn-editor[contenteditable="true"] {
    padding-inline-start: 50px;
    padding-inline-end: 50px !important;
  }
} */

/*TODO: Maybe change colors of links in editor.*/

/*TODO: overhaul and make all selectors more consistent, to avoid inconsistent behavior*/

